RESOLVED FIXED126345
Math.imul gives wrong results
https://bugs.webkit.org/show_bug.cgi?id=126345
Summary Math.imul gives wrong results
Jeff Muizelaar
Reported 2013-12-31 09:41:34 PST
Math.imul(0xffffffff, 5) is -5 in Firefox and Chrome in Safari 7.0.1 it returns 0.
Attachments
Patch (3.85 KB, patch)
2014-02-20 17:35 PST, Geoffrey Garen
mhahnenberg: review+
Radar WebKit Bug Importer
Comment 1 2014-01-02 15:39:02 PST
Geoffrey Garen
Comment 2 2014-02-20 17:35:07 PST
Mark Hahnenberg
Comment 3 2014-02-20 17:38:35 PST
Comment on attachment 224812 [details] Patch r=me
Geoffrey Garen
Comment 4 2014-02-20 17:56:06 PST
Note You need to log in before you can comment on or make changes to this bug.