Math.imul gives wrong results https://bugs.webkit.org/show_bug.cgi?id=126345

Reviewed by Mark Hahnenberg.

Source/JavaScriptCore:

Don't truncate non-int doubles to 0 -- that's just not how ToInt32 works.
Instead, take a slow path that will do the right thing.

* jit/ThunkGenerators.cpp:
(JSC::imulThunkGenerator):

LayoutTests:

Test this edge case of a double just outside the int range.

* js/dom/imul-expected.txt:
* js/dom/script-tests/imul.js:


Canonical link: https://commits.webkit.org/147169@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164461 268f45cc-cd09-0410-ab3c-d52691b4dbfc